test/files/pos/t5031/Id.scala
package t5031

object ID

