test/files/neg/t5031/Id.scala
package t5031

object Test

